# hik-or-mindvision-camera

./: .gitignore  CMakeLists.txt  README.md
include/: hik_camera.hpp  mindvision_camera.hpp
src/: hik_camera.cpp  mindvision_camera.cpp
